# mario-rs

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: rustfmt.yml
axum-examples/: Cargo.toml
axum-examples/src/: main.rs
axum-like/: Cargo.toml  readme.md
axum-like-examples/: Cargo.toml
axum-like-examples/src/: main.rs
axum-like/src/: body.rs  error.rs  extract.rs  handler.rs  lib.rs  macros.rs  response.rs  router.rs
axum-like/src/extract/: rejection.rs  request_parts.rs
axum-like/src/extract/builtin/: mod.rs  query.rs
axum-like/src/handler/: future.rs
axum-like/src/router/: empty_router.rs  future.rs  route.rs
hyper-examples/: Cargo.toml
hyper-examples-1/: Cargo.toml
hyper-examples-1/src/: main.rs
hyper-examples/src/: main.rs
mario-core/: Cargo.toml  readme.md
mario-core/src/: error.rs  extra.rs  handler.rs  lib.rs  mario_server.rs  request.rs  response.rs  route.rs  route_matcher.rs  routers.rs  server.rs  service.rs
mario-core/src/route/: body.rs  handler.rs  mod.rs  request.rs  response.rs  route.rs  route_matcher.rs  routers.rs  service.rs
mario-macro/: Cargo.toml
mario-macro/src/: lib.rs
mario-rs-examples/: Cargo.toml
mario-rs-examples/src/: main.rs
other-examples/: Cargo.toml
other-examples/src/: main.rs
other-examples/src/support/: mod.rs  tokiort.rs
sync-core/: Cargo.toml
sync-core/src/: lib.rs  route.rs  server.rs  service.rs
sync-examples/: Cargo.toml
sync-examples/src/: main.rs
