[workspace.package]
name = "mario-rs"
version = "0.1.0"
edition = "2021"

#[dependencies]
[workspace]
members = [
    "mario-core", "mario-macro",
    "mario-rs-examples", "sync-core", "other-examples", "sync-examples", "hyper-examples", "axum-like", "axum-like-examples", "axum-examples", "hyper-examples-1",
]
resolver = "2"

[workspace.dependencies]
mario-core = { path = "mario-core" }
mario-macro = { path = "mario-macro" }
sync-core = { path = "sync-core" }
axum-like = { path = "axum-like" }
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0"
http = { version = "1", default-features = false }
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
tracing = "0.1.27"
http-body = "1"
http-body-util = "0.1"
regex = "1.10.6"
bytes = "1.7.2"
log = "0.4.22"
futures = "0.3.30"
warp = "0.3"
route-recognizer = "0.2"


