[package]
name = "mario-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
http.workspace = true
hyper.workspace = true
tracing.workspace = true
hyper-util.workspace = true
http-body.workspace = true
http-body-util.workspace = true
regex.workspace = true
bytes.workspace = true
log.workspace = true
route-recognizer.workspace = true

