[package]
name = "mario-rs-examples"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
mario-core = { workspace = true }
mario-macro = { workspace = true }
hyper.workspace = true
http-body.workspace = true
http-body-util.workspace = true
tracing-subscriber.workspace = true
http.workspace = true
log.workspace = true
warp.workspace = true
serde_urlencoded = "0.7.1"
